--- a/Projects/BasicCANApp/unit1.lfm
+++ b/Projects/BasicCANApp/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 472
+  Left = 456
   Height = 386
-  Top = 206
+  Top = 137
   Width = 748
   Caption = 'Form1'
   ClientHeight = 386
@@ -61,6 +61,7 @@ object Form1: TForm1
     inherited CheckBoxDetailedLogging: TCheckBox
       Left = 61
       Top = 293
+      OnChange = nil
     end
     inherited CheckBoxJMRIFormat: TCheckBox
       Left = 237
