--- a/Projects/IoEditor/Forms/form_main.lfm
+++ b/Projects/IoEditor/Forms/form_main.lfm
@@ -1,11 +1,11 @@
 object Form1: TForm1
-  Left = 601
-  Height = 386
-  Top = 312
-  Width = 748
+  Left = 242
+  Height = 532
+  Top = 208
+  Width = 1015
   Caption = 'Form1'
-  ClientHeight = 386
-  ClientWidth = 748
+  ClientHeight = 532
+  ClientWidth = 1015
   OnCloseQuery = FormCloseQuery
   OnShow = FormShow
   LCLVersion = '1.4.0.4'
@@ -13,7 +13,7 @@ object Form1: TForm1
     Left = 0
     Height = 48
     Top = 0
-    Width = 748
+    Width = 1015
     ButtonHeight = 44
     Caption = 'ToolBar1'
     Images = ImageList1
@@ -51,24 +51,27 @@ object Form1: TForm1
   object StatusBar1: TStatusBar
     Left = 0
     Height = 23
-    Top = 363
-    Width = 748
+    Top = 509
+    Width = 1015
     Panels = <    
       item
         Width = 300
       end    
       item
         Width = 200
+      end    
+      item
+        Width = 500
       end>
     SimplePanel = False
   end
   object PanelNetworkTree: TPanel
     Left = 0
-    Height = 315
+    Height = 461
     Top = 48
     Width = 210
     Align = alLeft
-    ClientHeight = 315
+    ClientHeight = 461
     ClientWidth = 210
     TabOrder = 2
     object LabelMyNodes: TLabel
@@ -83,18 +86,20 @@ object Form1: TForm1
     end
     object LccNodeSelector: TLccNodeSelector
       Left = 1
-      Height = 300
+      Height = 446
       Top = 14
       Width = 208
       HorzScrollBar.Page = 1
+      HorzScrollBar.Tracking = True
       VertScrollBar.Page = 1
-      VertScrollBar.Smooth = True
       VertScrollBar.Tracking = True
       Align = alClient
       TabOrder = 0
+      TabStop = True
+      OnResize = LccNodeSelectorResize
       Alignment = taLeftJustify
       CaptionIndent = 4
-      CaptionLineCount = 1
+      CaptionLineCount = 2
       DefaultNodeHeight = 44
       DetailsFont.Color = clGray
       DetailsIndent = 8
@@ -104,84 +109,170 @@ object Form1: TForm1
   end
   object SplitterMain: TSplitter
     Left = 210
-    Height = 315
+    Height = 461
     Top = 48
     Width = 8
   end
-  object PanelMain: TPanel
-    Left = 218
-    Height = 315
+  object PageControl1: TPageControl
+    Left = 554
+    Height = 461
     Top = 48
-    Width = 530
+    Width = 461
+    ActivePage = TabSheet1
     Align = alClient
-    ClientHeight = 315
-    ClientWidth = 530
+    TabIndex = 0
     TabOrder = 4
-    object RadioGroup1: TRadioGroup
-      Left = 16
-      Height = 105
-      Top = 16
-      Width = 185
-      AutoFill = True
-      Caption = 'RadioGroup1'
-      ChildSizing.LeftRightSpacing = 6
-      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-      ChildSizing.EnlargeVertical = crsHomogenousChildResize
-      ChildSizing.ShrinkHorizontal = crsScaleChilds
-      ChildSizing.ShrinkVertical = crsScaleChilds
-      ChildSizing.Layout = cclLeftToRightThenTopToBottom
-      ChildSizing.ControlsPerLine = 1
-      ClientHeight = 87
-      ClientWidth = 181
-      Items.Strings = (
-        'Left Justify'
-        'Right Justify'
-        'Center'
-      )
-      OnClick = RadioGroup1Click
+    object TabSheet1: TTabSheet
+      Caption = 'TabSheet1'
+    end
+    object TabSheet2: TTabSheet
+      Caption = 'TabSheet2'
+      ClientHeight = 284
+      ClientWidth = 524
+      object PanelMain: TPanel
+        Left = 0
+        Height = 284
+        Top = 0
+        Width = 524
+        Align = alClient
+        ClientHeight = 284
+        ClientWidth = 524
+        TabOrder = 0
+        object RadioGroup1: TRadioGroup
+          Left = 16
+          Height = 105
+          Top = 16
+          Width = 185
+          AutoFill = True
+          Caption = 'RadioGroup1'
+          ChildSizing.LeftRightSpacing = 6
+          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+          ChildSizing.EnlargeVertical = crsHomogenousChildResize
+          ChildSizing.ShrinkHorizontal = crsScaleChilds
+          ChildSizing.ShrinkVertical = crsScaleChilds
+          ChildSizing.Layout = cclLeftToRightThenTopToBottom
+          ChildSizing.ControlsPerLine = 1
+          ClientHeight = 87
+          ClientWidth = 181
+          Items.Strings = (
+            'Left Justify'
+            'Right Justify'
+            'Center'
+          )
+          OnClick = RadioGroup1Click
+          TabOrder = 0
+        end
+        object RadioGroup2: TRadioGroup
+          Left = 216
+          Height = 105
+          Top = 16
+          Width = 185
+          AutoFill = True
+          Caption = 'RadioGroup2'
+          ChildSizing.LeftRightSpacing = 6
+          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+          ChildSizing.EnlargeVertical = crsHomogenousChildResize
+          ChildSizing.ShrinkHorizontal = crsScaleChilds
+          ChildSizing.ShrinkVertical = crsScaleChilds
+          ChildSizing.Layout = cclLeftToRightThenTopToBottom
+          ChildSizing.ControlsPerLine = 1
+          ClientHeight = 87
+          ClientWidth = 181
+          Items.Strings = (
+            'Top'
+            'Center'
+            'Bottom'
+          )
+          OnClick = RadioGroup2Click
+          TabOrder = 1
+        end
+        object SpinEdit1: TSpinEdit
+          Left = 24
+          Height = 16
+          Top = 136
+          Width = 152
+          OnChange = SpinEdit1Change
+          TabOrder = 2
+        end
+        object TrackBar1: TTrackBar
+          Left = 177
+          Height = 25
+          Top = 184
+          Width = 231
+          Max = 200
+          OnChange = TrackBar1Change
+          Position = 44
+          TabOrder = 3
+        end
+        object Button1: TButton
+          Left = 224
+          Height = 22
+          Top = 232
+          Width = 104
+          Action = ActionVisibility
+          TabOrder = 4
+        end
+      end
+    end
+  end
+  object Panel1: TPanel
+    Left = 218
+    Height = 461
+    Top = 48
+    Width = 336
+    Align = alLeft
+    Caption = 'Panel1'
+    ClientHeight = 461
+    ClientWidth = 336
+    TabOrder = 5
+    object LccNodeSelectorProducer: TLccNodeSelector
+      Left = 1
+      Height = 207
+      Top = 1
+      Width = 334
+      HorzScrollBar.Page = 1
+      VertScrollBar.Page = 1
+      Align = alTop
+      Color = clOlive
+      ParentColor = False
       TabOrder = 0
+      Alignment = taLeftJustify
+      CaptionIndent = 4
+      CaptionLineCount = 2
+      DefaultNodeHeight = 44
+      DetailsFont.Color = clGray
+      DetailsIndent = 8
+      Images = ImageList1
+      TextLayout = tlTop
     end
-    object RadioGroup2: TRadioGroup
-      Left = 216
-      Height = 105
-      Top = 16
-      Width = 185
-      AutoFill = True
-      Caption = 'RadioGroup2'
-      ChildSizing.LeftRightSpacing = 6
-      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-      ChildSizing.EnlargeVertical = crsHomogenousChildResize
-      ChildSizing.ShrinkHorizontal = crsScaleChilds
-      ChildSizing.ShrinkVertical = crsScaleChilds
-      ChildSizing.Layout = cclLeftToRightThenTopToBottom
-      ChildSizing.ControlsPerLine = 1
-      ClientHeight = 87
-      ClientWidth = 181
-      Items.Strings = (
-        'Top'
-        'Center'
-        'Bottom'
-      )
-      OnClick = RadioGroup2Click
+    object LccNodeSelectorConsumer: TLccNodeSelector
+      Left = 1
+      Height = 244
+      Top = 216
+      Width = 334
+      HorzScrollBar.Page = 1
+      VertScrollBar.Page = 1
+      Align = alClient
+      Color = clMaroon
+      ParentColor = False
       TabOrder = 1
+      Alignment = taLeftJustify
+      CaptionIndent = 4
+      CaptionLineCount = 2
+      DefaultNodeHeight = 70
+      DetailsFont.Color = clGray
+      DetailsIndent = 8
+      Images = ImageList2
+      TextLayout = tlTop
     end
-    object SpinEdit1: TSpinEdit
-      Left = 24
-      Height = 21
-      Top = 136
-      Width = 152
-      OnChange = SpinEdit1Change
-      TabOrder = 2
-    end
-    object TrackBar1: TTrackBar
-      Left = 177
-      Height = 25
-      Top = 184
-      Width = 231
-      Max = 200
-      OnChange = TrackBar1Change
-      Position = 44
-      TabOrder = 3
+    object Splitter1: TSplitter
+      Cursor = crVSplit
+      Left = 1
+      Height = 8
+      Top = 208
+      Width = 334
+      Align = alTop
+      ResizeAnchor = akTop
     end
   end
   object LccSettings: TLccSettings
@@ -264,6 +355,11 @@ object Form1: TForm1
       Caption = 'Log Window'
       ImageIndex = 1
       OnExecute = ActionLogWindowExecute
+    end
+    object ActionVisibility: TAction
+      AutoCheck = True
+      Caption = 'Visibility'
+      OnExecute = ActionVisibilityExecute
     end
   end
   object ImageList1: TImageList
@@ -480,8 +576,8 @@ object Form1: TForm1
   object ImageList2: TImageList
     Height = 60
     Width = 60
-    left = 384
-    top = 291
+    left = 112
+    top = 360
     Bitmap = {
       4C69060000003C0000003C000000004200000042000000420000004200000042
       0000004200000042000000420000004200000042000000420000004200000042
