--- a/Projects/IoEditor/Forms/form_main.lfm
+++ b/Projects/IoEditor/Forms/form_main.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 259
+  Left = 290
   Height = 532
-  Top = 213
+  Top = 137
   Width = 1015
   Caption = 'Form1'
   ClientHeight = 532
@@ -95,7 +95,9 @@ object Form1: TForm1
       VertScrollBar.Tracking = True
       Align = alClient
       Color = clWindow
+      Font.Style = [fsBold]
       ParentColor = False
+      ParentFont = False
       ParentShowHint = False
       PopupMenu = PopupMenuSelector
       ShowHint = True
@@ -143,62 +145,6 @@ object Form1: TForm1
         ClientHeight = 435
         ClientWidth = 453
         TabOrder = 0
-        object RadioGroup1: TRadioGroup
-          Left = 16
-          Height = 105
-          Top = 16
-          Width = 185
-          AutoFill = True
-          Caption = 'RadioGroup1'
-          ChildSizing.LeftRightSpacing = 6
-          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-          ChildSizing.EnlargeVertical = crsHomogenousChildResize
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 1
-          ClientHeight = 87
-          ClientWidth = 181
-          Items.Strings = (
-            'Left Justify'
-            'Right Justify'
-            'Center'
-          )
-          OnClick = RadioGroup1Click
-          TabOrder = 0
-        end
-        object RadioGroup2: TRadioGroup
-          Left = 216
-          Height = 105
-          Top = 16
-          Width = 185
-          AutoFill = True
-          Caption = 'RadioGroup2'
-          ChildSizing.LeftRightSpacing = 6
-          ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-          ChildSizing.EnlargeVertical = crsHomogenousChildResize
-          ChildSizing.ShrinkHorizontal = crsScaleChilds
-          ChildSizing.ShrinkVertical = crsScaleChilds
-          ChildSizing.Layout = cclLeftToRightThenTopToBottom
-          ChildSizing.ControlsPerLine = 1
-          ClientHeight = 87
-          ClientWidth = 181
-          Items.Strings = (
-            'Top'
-            'Center'
-            'Bottom'
-          )
-          OnClick = RadioGroup2Click
-          TabOrder = 1
-        end
-        object SpinEdit1: TSpinEdit
-          Left = 24
-          Height = 21
-          Top = 136
-          Width = 152
-          OnChange = SpinEdit1Change
-          TabOrder = 2
-        end
         object TrackBar1: TTrackBar
           Left = 177
           Height = 25
@@ -207,15 +153,7 @@ object Form1: TForm1
           Max = 200
           OnChange = TrackBar1Change
           Position = 44
-          TabOrder = 3
-        end
-        object Button1: TButton
-          Left = 224
-          Height = 22
-          Top = 232
-          Width = 104
-          Action = ActionVisibility
-          TabOrder = 4
+          TabOrder = 0
         end
       end
     end
@@ -266,10 +204,10 @@ object Form1: TForm1
       Left = 1
       Height = 244
       Top = 216
-      Width = 254
+      Width = 334
       HorzScrollBar.Page = 10
       VertScrollBar.Page = 1
-      Align = alLeft
+      Align = alClient
       Color = clMaroon
       ParentColor = False
       TabOrder = 1
@@ -328,6 +266,7 @@ object Form1: TForm1
     HardwareConnection = LccComPort
     LccSettings = LccSettings
     OnAliasIDChanged = LccNodeManagerAliasIDChanged
+    OnLccNodeCDI = LccNodeManagerLccNodeCDI
     OnNodeIDChanged = LccNodeManagerNodeIDChanged
     OnLccNodeInitializationComplete = LccNodeManagerLccNodeInitializationComplete
     OnLccNodeProtocolIdentifyReply = LccNodeManagerLccNodeProtocolIdentifyReply
@@ -368,11 +307,6 @@ object Form1: TForm1
       Caption = 'Log Window'
       ImageIndex = 1
       OnExecute = ActionLogWindowExecute
-    end
-    object ActionVisibility: TAction
-      AutoCheck = True
-      Caption = 'Visibility'
-      OnExecute = ActionVisibilityExecute
     end
   end
   object ImageList1: TImageList
