- More work on the IoEditor Properties Dialog

--- a/Projects/IoEditor/Forms/form_main.lfm
+++ b/Projects/IoEditor/Forms/form_main.lfm
@@ -312,6 +312,8 @@ object Form1: TForm1
     OnLccNodeCDI = LccNodeManagerLccNodeCDI
     OnLccNodeConfigMemAddressSpaceInfoReply = LccNodeManagerLccNodeConfigMemAddressSpaceInfoReply
     OnLccNodeConfigMemOptionsReply = LccNodeManagerLccNodeConfigMemOptionsReply
+    OnLccNodeConfigMemReadReply = LccNodeManagerLccNodeConfigMemReadReply
+    OnLccNodeConfigMemWriteReply = LccNodeManagerLccNodeConfigMemWriteReply
     OnNodeIDChanged = LccNodeManagerNodeIDChanged
     OnLccNodeInitializationComplete = LccNodeManagerLccNodeInitializationComplete
     OnLccNodeProtocolIdentifyReply = LccNodeManagerLccNodeProtocolIdentifyReply
