--- a/Projects/IoEditor/Forms/form_logging.lfm
+++ b/Projects/IoEditor/Forms/form_logging.lfm
@@ -6,6 +6,8 @@ object FormLogging: TFormLogging
   Caption = 'Logging'
   ClientHeight = 364
   ClientWidth = 714
+  OnHide = FormHide
+  OnShow = FormShow
   LCLVersion = '1.4.0.4'
   inline FrameLccLogging: TFrameLccLogging
     Height = 364
